[package]
name = "elevation-server"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.36.0", features = ["full"] }
serde = {version = "1.0.197", features = ["derive"] }
tracing = "0.1.40"
tracing-subscriber = {version = "0.3.18", features = ["env-filter"]}
geoutils = "0.5.1"
gdal = { git = "https://github.com/georust/gdal", rev = "826cb78" }
clap = "2.33.3"
tokio-tungstenite = "0.24.0"
futures-macro = "0.3.31"
futures-util = "0.3.31"


[profile.highperf]
inherits = "release"
lto = "fat"
codegen-units = 1
incremental = false
